2005-05-09  Paul Eggert  <eggert@cs.ucla.edu>

	* fts_.h (FTS): Use correct type for fts_compar member.
	(FTSENT): New member fts_fts.  Remove members fts_ino, fts_dev,
	fts_nlink; no longer needed now that fts_statp is always there.
	All uses changed to use fts_statp instead.
	* fts.c (__P): Remove.  All uses rewritten to assume C89 or better.
	(fts_open): Don't cast a function value in a possibly-unsafe way.
	(fts_compar): New function.
	(fts_sort): Use it.  But optimize the common case where all
	pointers smell the same.

2005-05-08  Paul Eggert  <eggert@cs.ucla.edu>

	* yesno.c: Include getline.h, not ctype.h.
	(yesno): Don't remove leading white space; POSIX doesn't allow it.
	Use getline to remove arbitrary restriction on response length.

2005-05-05  Paul Eggert  <eggert@cs.ucla.edu>

	* makepath.c (make_path): chdir to "//", not "/", if the file name
	starts with exactly two slashes.  This doesn't solve the problem
	in general but it's better than nothing.  Problem reported by
	Pierre A. Humblet via Eric Blake.

2005-05-01  Paul Eggert  <eggert@cs.ucla.edu>

	* modechange.h (mode_free): Remove; all callers changed to invoke
	'free'.
	* modechange.c: Likewise.
	xstrtol.h, stdbool.h, stddef.h: Don't include; no longer needed.
	(MODE_DONE): New constant.
	(struct mode_change): Remove 'next' member.
	(make_node_op_equals): New function; like the old one of the
	same name, except it allocates an array.
	(mode_compile, mode_create_from_ref): Use it.
	(mode_compile): Allocate result as an array, not a linked list.
	Parse octal string ourself, so that we catch mistakes like "+0".
	(mode_adjust): Arg is an array, not a linked list.

	* mbswidth.c, regex.c, strtol.c: Sync from gnulib.

2005-04-28  Paul Eggert  <eggert@cs.ucla.edu>

	* tempname.c (S_ISDIR, S_IRUSR, S_IRUSR, S_IWUSR, S_IXUSR): Remove.
	[!_LIBC] Include "stat-macros.h" instead.

	* file-type.c: Include file-type.h first.
	* filetype.h: Don't assume <sys/stat.h> was included first.
